Fixed horizontal scroll bar bug

--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -57,7 +57,6 @@ pre[data-theme*=' '] span {
   margin-left: -1em;
   padding-right: 0.5em;
   width: 100%;
-  max-width: 700px;
   cursor: pointer;
 }
 
@@ -79,5 +78,5 @@ pre[data-theme*=' '] span {
 .doc h4,
 .doc h5,
 .doc h6 {
-  @apply scroll-mt-12;
+  @apply relative scroll-mt-12;
 }
